# pixelwarsinspect

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-BUNDLE.md  README.md  pyproject.toml
src/pixel_wars/: __init__.py  _registry.py  pixel_wars.py  referee.mjs  referee_client.py
tests/: test_smoke.py  test_transport.py
